# sayest-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  download_model.py  main.py  pyproject.toml  request_api.py  requirements-docker.txt  test_api.py
app/: main.py  ui.py
app/api/: routes.py  schemas.py
app/constants/: audio_properties.py  environmental_variables.py  error_messages.py  phonemes.py
app/core/: environmental_variables.py  lifespan.py  logging.py
app/model/: gop_model.py  loss_function.py  utils.py
scripts/: check_predict_endpoint.py  update_phonemes_from_vocab.py
tests/: conftest.py  test_lifespan.py  test_predict.py  test_utils.py
