[project]
name = "sayest-api"
version = "0.1.0"
description = "API for the pronunciation assessment model. Accepts audio with transcription and returns scores."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi[standard]>=0.123.7",
    "gradio>=4.44.0",
    "huggingface-hub>=0.35.1",
    "optimum-quanto>=0.2.7",
    "soundfile>=0.13.1",
    "torch>=2.8,<2.9",
    "torchaudio>=2.8,<2.9",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "requests>=2.32.5",
    "ruff>=0.14.7",
]
